...
    <string name="total_steps">%1$d Steps</string>
    <string name="have_problem">I have a problem</string>
    <string name="back">Back</string>
    <string name="next">Next step</string>
    <string name="popup_skip_text">Do you want to skip this task?</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_task">Add task</string>
    <string name="run_task">Run Task</string>
    <string name="skip_task">Skip Task</string>
    <string name="schedule_task">Schedule Task</string>
    <string name="task_image">Task Image</string>
    <string name="task_step_image">Task Step Image</string>
    <string name="add_task_step">Add Task Step</string>
    <string name="login_hint">Log in to gain access to edit tasks</string>
    <string name="open_settings">Open settings</string>
    <string name="save">Save</string>
    <string name="task_title_hint">Task title</string>
    <string name="type">Type: %1$s</string>
    <string name="drag_task">Drag Task</string>
    <string name="plan_next_execution">Plan next execution</string>
    <string name="current_next_execution">Next execution: %1$s</string>
    <string name="plan_last_execution">Plan last execution</string>
...
    <string name="remove_pin_intro_warning_last_pin">Warning: This is the last PIN. Removing it will let anyone with access to your phone edit the settings and tasks.</string>
    <string name="remove_pin_hint">PIN</string>
    <string name="edit_step">Edit Step</string>
    <string name="change_image">Change Image</string>
    <string name="step_title">Step Title</string>
    <string name="step_description">Step Description</string>
    <string name="new_recording">New Recording</string>
    <string name="delete_recording">Delete Recording</string>
    <string name="step_title_image">Step Title Image</string>
    <string name="empty_step_title">Step Title must not be empty!</string>
    <string name="empty_step_description">Step Description must not be empty!</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="no_video">No Video recorded yet.</string>
    <string name="no_audio">No Audio recorded yet.</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="redo_image">New Photo</string>
    <string name="recording_in_progress">Recording in progress</string>
    <string name="playing_in_progress">Playing a recording</string>
    <string name="no_image">No title image set.</string>
    <string name="pin_not_found">This PIN does not exist</string>
    <string name="invalid_pin">PIN is not valid</string>
...
    <string name="skip_task_popup">Skip Task</string>
    <string name="accept_info_popup">Okay</string>
    <string name="show_pin_popup">Do you want to add %1$s as a new PIN?</string>
    <string name="pin_sent_popup">A new PIN was successfully sent to %1$s!</string>
    <string name="confirm_delete_pin_popup">Are you sure that you want to delete this PIN?</string>
    <string name="pin_deletion_confirmation">The PIN was deleted!</string>
    <string name="video" translatable="false">Video</string>
    <string name="audio" translatable="false">Audio</string>
    <string name="text" translatable="false">Text</string>
    <string name="request_type">What type of task step do you want to create?</string>
    <string name="no_pin_set_tip">Would you like to protect the task management with a PIN?</string>
</resources>
