<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup_background">

    <TextView
        android:id="@+id/tv_choosetype_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginTop="@dimen/sidesPadding"
        android:layout_marginEnd="@dimen/sidesPadding"
        android:layout_marginBottom="@dimen/sidesPadding"
        android:textAlignment="center"
        android:textSize="@dimen/h2"
        android:text="@string/request_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginEnd="@dimen/sidesPadding"
        android:layout_marginBottom="@dimen/sidesPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choosetype_text">

        <Button
            android:id="@+id/b_choosetype_textstep"
            style="@style/Theme.SimpleTasks.PrimaryButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b_choosetype_audiostep"
            style="@style/Theme.SimpleTasks.PrimaryButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/audio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_choosetype_textstep" />

        <Button
            android:id="@+id/b_choosetype_videostep"
            style="@style/Theme.SimpleTasks.PrimaryButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_choosetype_audiostep" />

        <Button
            android:id="@+id/b_choosetype_cancel"
            style="@style/Theme.SimpleTasks.InvertedPrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel_popup"
            app:layout_constraintTop_toBottomOf="@+id/b_choosetype_videostep"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>