<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".EditVideoStepActivity">

    <ImageButton
        android:id="@+id/ib_editvideostep_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginTop="@dimen/sidesPadding"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_black_24dp"
        app:tint="?colorOnBackground" />

    <TextView
        android:id="@+id/tv_editvideostep_step_title"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginEnd="@dimen/sidesPadding"
        android:text="@string/edit_step"
        android:textAlignment="center"
        android:textColor="?colorOnBackground"
        android:textSize="@dimen/h2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ib_editvideostep_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib_editvideostep_back_button" />

    <EditText
        android:id="@+id/et_editvideostep_step_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/step_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/step_title"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/b_editvideostep_save_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editvideostep_step_title"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/b_editvideostep_save_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_corner_background"
        android:text="@string/save"
        app:backgroundTint="?buttonBarPositiveButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_editvideostep_start_recording"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:text="@string/new_recording"
        app:layout_constraintBottom_toTopOf="@+id/b_editvideostep_save_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_editvideostep_step_title"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_editvideostep_no_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_video"
        android:textAlignment="center"
        android:textColor="?attr/colorControlActivated"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/b_editvideostep_start_recording"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_editvideostep_step_title" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frag_editvideostep_videoplayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/b_editvideostep_start_recording"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_editvideostep_step_title" />

</androidx.constraintlayout.widget.ConstraintLayout>